Extract SubmissionAssembly, raise the JDK floor to 21, add the LLM upload seam
Collapses the submission-assembly logic that Maven and Gradle had each grown
their own copy of. ScoreFromFileMojo, LlmScoringPopulator and the Gradle
AnalysisEngine now delegate to SubmissionAssembly and AnalysisResultDump, which
is where the -394/+273 swing in the plugin modules comes from.

JDK floor moves 17 -> 21 from a single property: maven.compiler.release replaces
source/target (source/target links against the building JDK's class library, so
newer APIs compile clean locally and only break in CI), with both workflows and
the OpenRewrite descriptor's requiredJavaVersion driven off it.

Adds LlmResponseUploader in api as the seam for publishing raw LLM responses;
the GCS implementation is server-side and lands separately in codiqo-backend.

Renames LanguageCapabilities to DiffWhitespacePolicy so the type is named for
the capability it answers rather than the language it was first written for, and
moves DaemonExecutors from llm into api/util now that more than the LLM client
needs it.

Test coverage added for the newly extracted seams and for several paths that had
none: SubmissionAssembly (full and degraded), MetricsAggregator aggregation,
ConfigFiles.describe, DiffWhitespacePolicy, class-root analysis, source-walk
failure handling, duplication-report path keys and the required-version check.

Dependency bumps: jgit 7.8.0, ecj 3.46.100, classgraph 4.8.195, djl-tokenizers
0.37.0.

Verified locally end to end against the AlloyDB production baseline: 10
turbospaces-boot commits re-analysed through the full build -> analyse -> score
-> persist path, with zero differences in every diff-derived column. Full build
is green (0 errors, all tests passing).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>